# log.c

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: build-lib.yaml  iwyu.yaml  kreonintegration.yaml
include/: log.h
src/: log.c
